--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,18 @@ body {
     border-bottom: 1px solid #e6e6e6;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    position: relative;
     padding: 0 32px;
 }
 
 .nav-logo {
+    position: absolute;
+    left: 32px;
     font-size: 20px;
     font-weight: 700;
     color: #000;
+    text-decoration: none;
 }
 
 .nav-links {
